--- a/blackjack.ipynb
+++ b/blackjack.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN0jnGvDF/CAPnqfQ7VN5zX",
+      "authorship_tag": "ABX9TyO8z+uyCU02NV6jGmskNqWb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       "metadata": {
         "id": "M2SaLbuzXKae"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -52,10 +52,10 @@
         "        self.deck_size = len(self.deck)\n",
         "\n",
         "class Player():\n",
-        "    def __init__(self, player_num):\n",
+        "    def __init__(self, name):\n",
         "        self.hand = []\n",
         "        self.hand_value = 0\n",
-        "        self.name = 'Dealer' if player_num == 0 else f\"Player {player_num}\"\n",
+        "        self.name = name\n",
         "        self.bust = False\n",
         "\n",
         "    def check_bust(self):\n",
@@ -75,8 +75,8 @@
         "            random.seed(seed)\n",
         "\n",
         "        self.deck = Deck(n_decks)\n",
-        "        self.dealer = Player(0)\n",
-        "        self.players = [Player(i) for i in range(1, n_players + 1)]\n",
+        "        self.dealer = Player(\"Dealer\")\n",
+        "        self.players = [Player(f\"Player {i}\") for i in range(1, n_players + 1)]\n",
         "        self.players_left = n_players\n",
         "\n",
         "    def get_card_value(self, card, player):\n",
@@ -146,7 +146,7 @@
       "metadata": {
         "id": "VNoZfbAg-SCe"
       },
-      "execution_count": 88,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -160,45 +160,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UzbAG1Pd-T1l",
-        "outputId": "880b1cb0-544e-4d79-e742-e4c7ca3be02a"
+        "outputId": "b6a7aa0f-6efc-4540-a624-00bb2d3e3a9d"
       },
-      "execution_count": 89,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "------------------------------\n",
-            "Dealer's hand: [5 of Clubs, ?]\n",
-            "Player 1's hand: ['7 of Clubs', '2 of Hearts']\n",
-            "------------------------------\n",
-            "Player 1's turn:\n",
-            "Current value is 9. Do you want to hit? (yes/no): yes\n",
-            "------------------------------\n",
-            "Dealer's hand: [5 of Clubs, ?]\n",
-            "Player 1's hand: ['7 of Clubs', '2 of Hearts', 'Queen of Spades']\n",
+            "Dealer's hand: [9 of Diamonds, ?]\n",
+            "Player 1's hand: ['9 of Hearts', 'Queen of Clubs']\n",
             "------------------------------\n",
             "Player 1's turn:\n",
             "Current value is 19. Do you want to hit? (yes/no): no\n",
             "------------------------------\n",
             "Dealer's turn:\n",
-            "Dealer's hand: [5 of Clubs, ?]\n",
+            "Dealer's hand: [9 of Diamonds, ?]\n",
             "------------------------------\n",
-            "Dealer's hand: [5 of Clubs, ?]\n",
-            "Player 1's hand: ['7 of Clubs', '2 of Hearts', 'Queen of Spades']\n",
-            "------------------------------\n",
-            "Dealer's hand: [5 of Clubs, ?]\n",
-            "Player 1's hand: ['7 of Clubs', '2 of Hearts', 'Queen of Spades']\n",
-            "------------------------------\n",
-            "Dealer's hand: [5 of Clubs, ?]\n",
-            "Player 1's hand: ['7 of Clubs', '2 of Hearts', 'Queen of Spades']\n",
-            "------Dealer busted!------\n",
-            "------------------------------\n",
-            "Dealer's hand: [5 of Clubs, ?]\n",
-            "Player 1's hand: ['7 of Clubs', '2 of Hearts', 'Queen of Spades']\n",
+            "Dealer's hand: [9 of Diamonds, ?]\n",
+            "Player 1's hand: ['9 of Hearts', 'Queen of Clubs']\n",
             "------------------------------\n",
             "Final state of the game:\n",
-            "Dealer's hand: ['5 of Clubs', '2 of Clubs', '3 of Hearts', '3 of Diamonds', 'Queen of Hearts']\n",
+            "Dealer's hand: ['9 of Diamonds', '8 of Hearts']\n",
             "Player 1 wins!\n"
           ]
         }
