--- a/blackjack.ipynb
+++ b/blackjack.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO8z+uyCU02NV6jGmskNqWb",
+      "authorship_tag": "ABX9TyN/9Qhj4G9wz0AqmSM38X5G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,12 +29,12 @@
     {
       "cell_type": "code",
       "source": [
-        "import random"
+        "import random, time"
       ],
       "metadata": {
         "id": "M2SaLbuzXKae"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -61,7 +61,7 @@
         "    def check_bust(self):\n",
         "        if self.hand_value > 21:\n",
         "            self.bust = True\n",
-        "            print(f'------{self.name} busted!------')\n",
+        "            print(f'----------------------\\n!! {self.name} busted !!\\n----------------------\\n')\n",
         "\n",
         "    def __repr__(self):\n",
         "        return self.name\n",
@@ -95,45 +95,55 @@
         "\n",
         "            player.hand += [card]\n",
         "            player.hand_value += value\n",
-        "            player.check_bust()\n",
+        "            # player.check_bust()\n",
         "\n",
         "            return card\n",
         "\n",
-        "    def display_board(self):\n",
-        "        print(\"------------------------------\")\n",
-        "        print(f\"Dealer's hand: [{self.dealer.hand[0]}, ?]\")\n",
+        "    def display_board(self, hide_dealer=True):\n",
+        "        print(\"\\n--------------BLACKJACK----------------\")\n",
+        "        if hide_dealer:\n",
+        "          print(f\"Dealer's hand: [{self.dealer.hand[0]}, ?]\")\n",
+        "        else:\n",
+        "          print(f\"Dealer's hand: {self.dealer.hand}\")\n",
+        "\n",
         "        for player in self.players:\n",
         "            print(f\"{player}'s hand: {player.hand}\")\n",
         "\n",
+        "        print()\n",
+        "\n",
         "    def play_game(self):\n",
+        "      # Deal first two cards\n",
         "        for _ in range(2):\n",
         "            for player in [self.dealer] + self.players:\n",
         "                self.pick_one_card(player)\n",
-        "        self.display_board()\n",
+        "        self.display_board(hide_dealer=True)\n",
         "\n",
         "        for player in self.players:\n",
         "            while not player.bust:\n",
-        "                print(\"------------------------------\")\n",
+        "                # print(\"------------------------------\")\n",
         "                print(f\"{player}'s turn:\")\n",
         "                if input(f\"Current value is {player.hand_value}. Do you want to hit? (yes/no): \").lower() == 'yes':\n",
         "                    self.pick_one_card(player)\n",
         "                    self.display_board()\n",
+        "                    player.check_bust()\n",
         "                else:\n",
         "                    break\n",
         "\n",
         "        # Dealer's turn\n",
-        "        print(\"------------------------------\")\n",
-        "        print(\"Dealer's turn:\")\n",
-        "        print(f\"{self.dealer}'s hand: [{self.dealer.hand[0]}, ?]\")\n",
-        "        self.display_board()\n",
+        "        # print(\"------------------------------\")\n",
+        "        print(\"Dealer's turn:\", end='')\n",
+        "        # print(f\"{self.dealer}'s hand: [{self.dealer.hand[0]}, ?]\")\n",
+        "        self.display_board(hide_dealer=False)\n",
         "        while not self.dealer.bust and self.dealer.hand_value < 17:\n",
+        "            time.sleep(1)\n",
         "            self.pick_one_card(self.dealer)\n",
-        "            self.display_board()\n",
+        "            self.display_board(hide_dealer=False)\n",
+        "            self.dealer.check_bust()\n",
         "\n",
         "        # Determine winners\n",
-        "        print(\"------------------------------\")\n",
-        "        print(\"Final state of the game:\")\n",
-        "        print(f\"{self.dealer}'s hand: {self.dealer.hand}\")\n",
+        "        print(\"\\n+++++++++++++++++++++++++++++++++++++++\")\n",
+        "        print(\"Final state of the game:\", end='')\n",
+        "        self.display_board(hide_dealer=False)\n",
         "        for player in self.players:\n",
         "            if not player.bust:\n",
         "                if self.dealer.bust or player.hand_value > self.dealer.hand_value:\n",
@@ -146,13 +156,13 @@
       "metadata": {
         "id": "VNoZfbAg-SCe"
       },
-      "execution_count": 7,
+      "execution_count": 111,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "blackjack_game = BlackJack(n_players=1, n_decks=1)\n",
+        "blackjack_game = BlackJack(n_players=2, n_decks=2, seed=None)\n",
         "blackjack_game.play_game()"
       ],
       "metadata": {
@@ -160,30 +170,97 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UzbAG1Pd-T1l",
-        "outputId": "b6a7aa0f-6efc-4540-a624-00bb2d3e3a9d"
+        "outputId": "927a9ce5-e597-4e18-d461-e7e13b27ccc6"
       },
-      "execution_count": 8,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "------------------------------\n",
-            "Dealer's hand: [9 of Diamonds, ?]\n",
-            "Player 1's hand: ['9 of Hearts', 'Queen of Clubs']\n",
-            "------------------------------\n",
+            "\n",
+            "--------------BLACKJACK----------------\n",
+            "Dealer's hand: [5 of Diamonds, ?]\n",
+            "Player 1's hand: ['7 of Clubs', '2 of Spades']\n",
+            "Player 2's hand: ['3 of Hearts', '6 of Clubs']\n",
+            "\n",
             "Player 1's turn:\n",
-            "Current value is 19. Do you want to hit? (yes/no): no\n",
-            "------------------------------\n",
+            "Current value is 9. Do you want to hit? (yes/no): yes\n",
+            "\n",
+            "--------------BLACKJACK----------------\n",
+            "Dealer's hand: [5 of Diamonds, ?]\n",
+            "Player 1's hand: ['7 of Clubs', '2 of Spades', '6 of Spades']\n",
+            "Player 2's hand: ['3 of Hearts', '6 of Clubs']\n",
+            "\n",
+            "Player 1's turn:\n",
+            "Current value is 15. Do you want to hit? (yes/no): yes\n",
+            "\n",
+            "--------------BLACKJACK----------------\n",
+            "Dealer's hand: [5 of Diamonds, ?]\n",
+            "Player 1's hand: ['7 of Clubs', '2 of Spades', '6 of Spades', '7 of Spades']\n",
+            "Player 2's hand: ['3 of Hearts', '6 of Clubs']\n",
+            "\n",
+            "----------------------\n",
+            "!! Player 1 busted !!\n",
+            "----------------------\n",
+            "\n",
+            "Player 2's turn:\n",
+            "Current value is 9. Do you want to hit? (yes/no): yes\n",
+            "\n",
+            "--------------BLACKJACK----------------\n",
+            "Dealer's hand: [5 of Diamonds, ?]\n",
+            "Player 1's hand: ['7 of Clubs', '2 of Spades', '6 of Spades', '7 of Spades']\n",
+            "Player 2's hand: ['3 of Hearts', '6 of Clubs', '2 of Diamonds']\n",
+            "\n",
+            "Player 2's turn:\n",
+            "Current value is 11. Do you want to hit? (yes/no): yes\n",
+            "\n",
+            "--------------BLACKJACK----------------\n",
+            "Dealer's hand: [5 of Diamonds, ?]\n",
+            "Player 1's hand: ['7 of Clubs', '2 of Spades', '6 of Spades', '7 of Spades']\n",
+            "Player 2's hand: ['3 of Hearts', '6 of Clubs', '2 of Diamonds', '4 of Spades']\n",
+            "\n",
+            "Player 2's turn:\n",
+            "Current value is 15. Do you want to hit? (yes/no): yes\n",
+            "\n",
+            "--------------BLACKJACK----------------\n",
+            "Dealer's hand: [5 of Diamonds, ?]\n",
+            "Player 1's hand: ['7 of Clubs', '2 of Spades', '6 of Spades', '7 of Spades']\n",
+            "Player 2's hand: ['3 of Hearts', '6 of Clubs', '2 of Diamonds', '4 of Spades', '3 of Hearts']\n",
+            "\n",
+            "Player 2's turn:\n",
+            "Current value is 18. Do you want to hit? (yes/no): no\n",
             "Dealer's turn:\n",
-            "Dealer's hand: [9 of Diamonds, ?]\n",
-            "------------------------------\n",
-            "Dealer's hand: [9 of Diamonds, ?]\n",
-            "Player 1's hand: ['9 of Hearts', 'Queen of Clubs']\n",
-            "------------------------------\n",
+            "--------------BLACKJACK----------------\n",
+            "Dealer's hand: ['5 of Diamonds', 'King of Diamonds']\n",
+            "Player 1's hand: ['7 of Clubs', '2 of Spades', '6 of Spades', '7 of Spades']\n",
+            "Player 2's hand: ['3 of Hearts', '6 of Clubs', '2 of Diamonds', '4 of Spades', '3 of Hearts']\n",
+            "\n",
+            "\n",
+            "--------------BLACKJACK----------------\n",
+            "Dealer's hand: ['5 of Diamonds', 'King of Diamonds', 'Ace of Spades']\n",
+            "Player 1's hand: ['7 of Clubs', '2 of Spades', '6 of Spades', '7 of Spades']\n",
+            "Player 2's hand: ['3 of Hearts', '6 of Clubs', '2 of Diamonds', '4 of Spades', '3 of Hearts']\n",
+            "\n",
+            "\n",
+            "--------------BLACKJACK----------------\n",
+            "Dealer's hand: ['5 of Diamonds', 'King of Diamonds', 'Ace of Spades', 'King of Clubs']\n",
+            "Player 1's hand: ['7 of Clubs', '2 of Spades', '6 of Spades', '7 of Spades']\n",
+            "Player 2's hand: ['3 of Hearts', '6 of Clubs', '2 of Diamonds', '4 of Spades', '3 of Hearts']\n",
+            "\n",
+            "----------------------\n",
+            "!! Dealer busted !!\n",
+            "----------------------\n",
+            "\n",
+            "\n",
+            "+++++++++++++++++++++++++++++++++++++++\n",
             "Final state of the game:\n",
-            "Dealer's hand: ['9 of Diamonds', '8 of Hearts']\n",
-            "Player 1 wins!\n"
+            "--------------BLACKJACK----------------\n",
+            "Dealer's hand: ['5 of Diamonds', 'King of Diamonds', 'Ace of Spades', 'King of Clubs']\n",
+            "Player 1's hand: ['7 of Clubs', '2 of Spades', '6 of Spades', '7 of Spades']\n",
+            "Player 2's hand: ['3 of Hearts', '6 of Clubs', '2 of Diamonds', '4 of Spades', '3 of Hearts']\n",
+            "\n",
+            "Player 2 wins!\n"
           ]
         }
       ]
